[Vaibhav] Created API for user

--- a/Book_Store/appsettings.json
+++ b/Book_Store/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JWT": {
+    "Secret": "4F9v8A2q!sD#3zL7ePxQ^mN0WkYbRtU6",
+    "ValidIssuer": "YourApp",
+    "ValidAudience": "YourAppUsers"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LAPTOP-2PAOEK5F\\SQLEXPRESS;Initial Catalog=Book_StoreDB;Integrated Security=True;Trust Server Certificate=True;"
+  },
   "AllowedHosts": "*"
 }
