--- a/Bussiness_Layer/Bussiness_Layer.csproj
+++ b/Bussiness_Layer/Bussiness_Layer.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess_Layer\DataAccess_Layer.csproj" />
+  </ItemGroup>
+
 </Project>
