[Vaibhav] Added Admin authentication

--- a/Book_Store/appsettings.json
+++ b/Book_Store/appsettings.json
@@ -13,5 +13,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=LAPTOP-2PAOEK5F\\SQLEXPRESS;Initial Catalog=Book_StoreDB;Integrated Security=True;Trust Server Certificate=True;"
   },
+  "SMTP": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "Username": "vdhaygude2002@gmail.com",
+    "Password": "nrug rzsr iktw uelc",
+    "EnableSSL": true,
+    "FromEmail": "vdhaygude2002@gmail.com"
+  },
+
   "AllowedHosts": "*"
 }
