[Vaibhav] Added refresh and access token for user and admin

--- a/Book_Store/appsettings.json
+++ b/Book_Store/appsettings.json
@@ -8,7 +8,9 @@
   "JWT": {
     "Secret": "4F9v8A2q!sD#3zL7ePxQ^mN0WkYbRtU6",
     "ValidIssuer": "YourApp",
-    "ValidAudience": "YourAppUsers"
+    "ValidAudience": "YourAppUsers",
+    "AccessTokenExpirationMinutes": 60, 
+    "RefreshTokenExpirationDays": 7
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=LAPTOP-2PAOEK5F\\SQLEXPRESS;Initial Catalog=Book_StoreDB;Integrated Security=True;Trust Server Certificate=True;"
