[Vaibhav] Added CRUD operation for Book

--- a/Book_Store/appsettings.json
+++ b/Book_Store/appsettings.json
@@ -7,9 +7,9 @@
   },
   "JWT": {
     "Secret": "4F9v8A2q!sD#3zL7ePxQ^mN0WkYbRtU6",
-    "ValidIssuer": "YourApp",
-    "ValidAudience": "YourAppUsers",
-    "AccessTokenExpirationMinutes": 60, 
+    "Issuer": "YourApp",
+    "Audience": "YourAppUsers",
+    "AccessTokenExpirationMinutes": 60,
     "RefreshTokenExpirationDays": 7
   },
   "ConnectionStrings": {
